[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Sound_menu.gd" type="Script" id=2]

[node name="Sound_menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0
color = Color( 0.1, 0.01, 0.0325, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0

[node name="background_music" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 268.0
size_flags_vertical = 3

[node name="label" type="Label" parent="VBoxContainer/background_music"]
margin_top = 50.0
margin_right = 964.0
margin_bottom = 82.0
size_flags_vertical = 6
text = "Background Volume"
align = 1
valign = 1

[node name="background" type="HSlider" parent="VBoxContainer/background_music"]
margin_top = 194.0
margin_right = 964.0
margin_bottom = 210.0
size_flags_vertical = 6
min_value = -60.0
max_value = 5.0
value = -20.0

[node name="sfx_music" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="label" type="Label" parent="VBoxContainer/sfx_music"]
margin_top = 50.0
margin_right = 964.0
margin_bottom = 82.0
size_flags_vertical = 6
text = "SFX Volume"
align = 1
valign = 1

[node name="sfx" type="HSlider" parent="VBoxContainer/sfx_music"]
margin_top = 194.0
margin_right = 964.0
margin_bottom = 210.0
size_flags_vertical = 6
min_value = -60.0
max_value = 5.0
value = -20.0

[connection signal="value_changed" from="VBoxContainer/background_music/background" to="." method="_on_background_value_changed"]
[connection signal="value_changed" from="VBoxContainer/sfx_music/sfx" to="." method="_on_SFX_value_changed"]
